--- a/app/views/installment_plans/new.html.erb
+++ b/app/views/installment_plans/new.html.erb
@@ -1,12 +1,21 @@
 <h1>New Installment Plan for <%= @student.name %></h1>
-<%= form_with(model: [@student, @installment_plan], local: true) do |f| %>
+
+<% if flash[:alert] %>
+  <div class="alert alert-danger">
+    <%= flash[:alert] %>
+  </div>
+<% end %>
+
+<%= form_with(model: [@student, @installment_plan], local: true, data: { turbo: false }) do |f| %>
   <div>
     <%= f.label :total_amount %>
     <%= f.number_field :total_amount, step: 0.01 %>
   </div>
+
   <div>
     <%= f.label :number_of_installments %>
-    <%= f.number_field :number_of_installments %>
+    <%= f.number_field :number_of_installments, step: 1 %>
   </div>
+
   <%= f.submit 'Create Installment Plan' %>
 <% end %>
