--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,17 +1,28 @@
-<h1>Make Payment for <%= @student.name %></h1>
-<h2>Installment <%= params[:installment_index].to_i + 1 %></h2>
-<%= form_with(model: [@student, @installment_plan, @payment], local: true) do |f| %>
-  <%= f.hidden_field :installment_index, value: params[:installment_index] %>
-  <div>
-    <%= f.label :amount %>
-    <%= f.number_field :amount, step: 0.01 %>
-  </div>
-  <div>
-    <p>If payment is less than the installment amount:</p>
-    <%= radio_button_tag :action_type, 'add_to_next' %>
-    <%= label_tag :action_type_add_to_next, "Add to next installment" %>
-    <%= radio_button_tag :action_type, 'create_new' %>
-    <%= label_tag :action_type_create_new, "Create new installment" %>
-  </div>
-  <%= f.submit 'Make Payment' %>
+<% if @student %>
+  <h1>Make Payment for <%= @student.name %></h1>
+<% else %>
+  <h1>Make Payment</h1>
+<% end %>
+
+<% if @installment_plan %>
+  <h2>Installment <%= params[:installment_index].to_i + 1 %></h2>
+  <p>Remaining Balance: <%= number_to_currency(@installment_plan.remaining_balance) %></p>
+
+  <%= form_with(model: [@student, @installment_plan, @payment], local: true) do |f| %>
+    <%= f.hidden_field :installment_index, value: params[:installment_index] %>
+    <div>
+      <%= f.label :amount %>
+      <%= f.number_field :amount, step: 0.01, max: @installment_plan.remaining_balance %>
+    </div>
+    <div>
+      <p>If payment is less than the installment amount:</p>
+      <%= radio_button_tag :action_type, 'add_to_next', true %>
+      <%= label_tag :action_type_add_to_next, "Add to next installment" %>
+      <%= radio_button_tag :action_type, 'create_new' %>
+      <%= label_tag :action_type_create_new, "Create new installment" %>
+    </div>
+    <%= f.submit 'Make Payment' %>
+  <% end %>
+<% else %>
+  <p>No installment plan found.</p>
 <% end %>
