--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -6,7 +6,7 @@
 
 <% if @installment_plan %>
   <h2>Installment <%= params[:installment_index].to_i + 1 %></h2>
-  <p>Remaining Balance: <%= number_to_currency(@installment_plan.remaining_balance) %></p>
+  <p>Remaining Balance: INR <%= (@installment_plan.remaining_balance) %></p>
 
   <%= form_with(model: [@student, @installment_plan, @payment], local: true) do |f| %>
     <%= f.hidden_field :installment_index, value: params[:installment_index] %>
